app/assets/stylesheets/_checklist.css.scss
@import "bourbon";
@import "grid-settings";
@import "neat";
@import "fontfaces";

// *************** VARIABLES **************


// *************** BASELINE GRID **********



// *************** COLORS *****************

$red: #B7201B; 
$grey_text: #343434;



//****************** MIXINS ***************

@mixin header($weight, $size, $color) {
  font-weight: $weight;
  font-size: $size;
  color: $color;
}

@mixin bar($height, $color: $red) {
  height: $height;
  background-color: $color;
}



//****************** STYLING **************
//*****************************************


//****************** LINKS ****************

.blog-tags a:hover {
    cursor: pointer;
    border-bottom: solid 1px $red;
}

.blogger-name a:hover {
    cursor: pointer;
    border-bottom: solid 1px $grey_text;
}

.logo-text a:hover { 
    color: rgba($grey_text, .88);
    cursor: pointer;
    text-decoration: none;
  
}

.italics a:hover {
    cursor: pointer;
    border-bottom: solid 1px $red;
}

span a {
  color: $red;
}

//****************** HEADINGS *************



.logo-text {
  @include span-columns(3);
  padding-top: 8px;
}

body {
  font-size: 100%;
}

h2, h3, h5, .blogger-name {
  font-family: Source Sans Pro;
}

h1 {
  font-family: Impact, Source Sans Pro, Sans-Serif; 
  @include header($weight: normal, $size: em(72, 20), $color: $grey_text);
  @include span-columns(4);

  @include media(max-width 1350px) {
    @include span-columns(3);
  }
  @include media(max-width 1275px) {
    @include header($weight: normal, $size: em(60, 20), $color: $grey_text);
    padding-top: 13px;
  }
  @include media(max-width 695px) {
    padding-left: 30px;
  }
  @include media(max-width 600px) {
    padding-left: 40px;
  }
  @include media(max-width 520px) {
    @include header($weight: normal, $size: em(50, 20), $color: $grey_text);
    padding-left: 55px;
  }
}

h2 {
  @include header($weight: 700, $size: em(53, 20), $color: $grey_text);
  letter-spacing: -0.05em; 
  @include media(max-width 1275px) {
    @include header($weight: 700, $size: em(45, 20), $color: $grey_text);
    padding-top: 12px;
  }
  @include media(max-width 720px) {
    @include header($weight: 600, $size: em(32, 20), $color: $grey_text);
  }
  @include media(max-width 520px) {
    @include header($weight: 500, $size: em(31, 20), $color: $grey_text);
  }
}

h3 {
  @include header($weight: 300, $size: em(40, 20), $color: $red);
  letter-spacing: -0.04em;
  @include media(max-width 1275px) {
    @include header($weight: 300, $size: em(35, 20), $color: $red);
  }
  @include media(max-width 720px) {
    @include header($weight: 300, $size: em(30, 20), $color: $grey_text);
  }
  @include media(max-width 520px) {
    @include header($weight: 300, $size: em(27, 20), $color: $grey_text);
    padding-top: 10px;
  }
}

h5, .blogger-name {
  @include header($weight: 200, $size: em(25, 20), $color: $red);
  font-style: italic;
}

.blogger-name, .date  {
  @include media(max-width 720px) {
    @include header($weight: 200, $size: em(20, 20), $color: $red);
    padding-top: 20px;
  }
}

.blog-tags {
  @include media(max-width 600px) {
    @include header($weight: 200, $size: em(18, 20), $color: $red);
  }
}

.date  {
  @include media(max-width 720px) {
  }
  @include media(max-width 500px) {
    padding-top: 38px;
  }
  @include media(max-width 480px) {
    padding-top: 67px;
  }
}

.blogger-name {
  @include media(max-width 500px) {
    padding-top: 10px;
  }
}



//****************** TOP *******************

.border-top {
  @include bar($height: 7px);
}

.content {
  @include outer-container;
}




//******************** BOTTOM *****************

.border-bottom {
  @include bar($height: 22px);
  margin-top: 180px;
}

.copyright {
  @include outer-container;
  @include span-columns(12);
  font-family: Source Sans Pro;
  font-size: em(16, 20);
  text-align: center;
  padding-top: 3px;
  color: white;
  @include media(max-width 700px) {
    font-size: em(5, 20);
    background-color: $red;
  }
  
}




//******************* MISC ******************

.blog-tags, .title, .subtitle, .blogger-name, .blog-text {
  padding-left: 10px;
}



//******************** PARAGRAPH ************

.blog-text {
  font-family: 'DroidSerif',Georgia, Cambria, Serif;
  font-weight: normal;
  font-size: em(25, 20);
  color: $grey_text;
}

.capital_letter {
  font-family: Source Sans Pro;
  font-weight: 700;
  font-size: em(40, 20);
}

.italics {
  font-style: italic;
}



// *********** CONTENT LINES *********
//************************************


// *********** FIRST LINE ************

.first-line {
  @include outer-container;
  padding-top: 16px;
  @include media(max-width 1350px) {
  }
  @include media(max-width 1000px) {
    @include shift(2);
  }
  @include media(max-width 855px) {
    @include shift(1);
  }
}



.blog-tags {
  @include span-columns(7);
  margin-top: 108px; 
  @include media(max-width 1275px) {
    margin-top: 121px;
  }
  @include media(max-width 1000px) {
    @include shift(0);
  }
  li {
    float: left;
    padding-right: 50px;
    @include media(max-width 600px) {
      padding-right: 10px;
    }
  }
  @include media(max-width 1000px) {
    @include span-columns(11);
    margin-top: 40px;
    padding-right: 30px;
  }
}

.logo-text, .logo-icon, .date {
  margin-top: 55px;
  text-align: center;
}


.logo-text {
  @include span-columns(4);
  @include media(max-width 1350px) {
    @include span-columns(3);
  }
  @include media(max-width 1275px) {
    padding-top: 32px;
  }
  @include media(max-width 1000px) {
    @include span-columns(7);
    text-align: left;
    margin-top: 67px;
    margin-left: -10px;
  }
}

.small-logo-background {
  @include span-columns(3);
}

.small-logo {
  @include span-columns(3);
  @include shift(.55);
  display: none;
  @include media(max-width 1000px) {
    display: inline;
    img {
      width: 120px;
      height: 120px;
    }
  }
}


//*********** SECOND LINE ************

.second-line {
  @include outer-container;
  z-index: 2;
  position: absolute;
  margin-top: 20px;
  @include media(max-width 1350px) {
    margin-top: -18px;
  }
  @include media(max-width 1000px){
    @include shift(2);
  }
  @include media(max-width 855px) {
    @include shift(1);
  }
}

.logo-background {
  @include span-columns(4);
  padding-bottom: 150px;
  text-align: center;
  @include media(max-width 1350px) {
    margin-top: 14px;
    @include span-columns(3);
  }
  @include media(max-width 1000px) {
    display: none;
  }
}

.logo-icon {
  margin-top: 50px;
  margin-bottom: 30px;
  height: 149px;
  width: 149px;
  
}

.title, .subtitle, .blogger-name {
  @include span-columns(7);
  line-height: 1.5em;
  @include media(max-width 1350px) {
    @include span-columns(8);
  }
  @include media(max-width 1000px) {
    @include span-columns(12);
  }
}

.blogger-name, .title, .subtitle {
  color: $grey_text;
}

.title {
  margin-top: 70px;
  margin-bottom: -29px;
  @include media(max-width 1350px) {
  }
  @include media(max-width 1000px) {
    margin-top: 45px;
  }
  @include media(max-width 500px) {
    line-height: 1em;
  }
}

.subtitle {
 margin-bottom: 0.5em;
 color: $red;
 @include media(max-width 1350px) {
  }
}

.blogger-name {
  padding-top: 13px;
  margin-left: 5px;
  @include media(max-width 1350px) {
  }
}




//************* HOMER *****************

.homer-background {
  @include outer-container;
  z-index: 2;
  position: absolute;
  margin-left: 215px;
  margin-top: 45px;
}

.homer-icon {
  @include span-columns(10);
  @include shift(6);
  padding-left: 12px;
  @include media(max-width 1350px) {
    @include shift(3);
    padding-left: 0px;
  }
  @include media(max-width 1000px) {
    @include span-columns(5);
    @include shift(2);
  }
  @include media(max-width 855px) {
    @include span-columns(6);
    @include shift(1);
  }
  @include media(max-width 720px) {
    @include span-columns(8);
  }
  @include media(max-width 500px) {
    @include span-columns(10);
  }
}




//************** THIRD LINE ***********

.third-line {
  @include outer-container;
  z-index: 2;
  position: relative;
  margin-top: 264px;
  @include media(max-width 1350px) {
  }
  @include media(max-width 855px) {
    @include shift(-1.17);
  }
  @include media(max-width 720px) {
    margin-top: 200px;
  }
}

.blog-text {
  @include span-columns(7);
  line-height: 1.52em;
  padding-top: 1.5em;

  @include media(max-width 1275px) {
    font-size: em(22, 20);
  }
  @include media(max-width 1000px) {
    @include shift(2);
    @include span-columns(9);
    margin-top: 20px;
  }
  @include media(max-width 720px) {
    font-size: em(20, 20);
    margin-top: 0px; 
  }
}

.date {
  @include span-columns(4);
  margin-top: 51px;
  @include media(max-width 1350px) {
    @include span-columns(3);
  }
  @include media(max-width 1000px) {
    @include span-columns(4);
    @include shift(2);
    margin-top: -45px;
    padding-left: 10px;
    text-align: left;
  }
  @include media(max-width 500px) {
    margin-top: -85px;
  }
}



//*************** FOURTH BLOCK **********

.fourth-block {
  margin-top: 323px;
  @include media(max-width 1350px) {
    margin-top: 359px;
  }
  @include media(max-width 1000px) {
    @include shift(.95);
    margin-top: 60px;
  }
  @include media(max-width 855px) {
    @include shift(-.17);
  }
}

.wrapper {
  @include outer-container;
//  margin-bottom: 35px;
  line-height: 3.6em;
  @include media(max-width 1350px) {
  }
}

.check-ordinals {
  @include span-columns(2);
  @include shift(1.8);
  @include media(max-width 1350px) {
    @include shift(1.3);
  }
}

.check-lines {
  @include span-columns(8);
  margin-left: -11px;
  @include media(max-width 1000px) {
    @include span-columns(12);
  }
}

.ordinals, .list {
  font-family: 'DroidSerif'; 
}

.ordinals, .ordinal-letter, .list {
  color: $grey_text;
}

.list {
  @include shift(0.31);
  font-size: em(25, 20);
  padding-left: 10px;
  padding-top: 2px;
  @include media(max-width 1350px) {
    padding-top: 4px;
    @include shift(-0.5);
  }
  @include media(max-width 1275px) {
    font-size: em(22, 20);
    @include shift(.52);
  }
  @include media(max-width 1000px) {
    @include shift(1.16);
  }
  @include media(max-width 775px) {
    font-size: em(22, 20);   
  }
  @include media(max-width 695px) {
    font-size: em(20, 20);
    padding-left: 8px;
  }
  @include media(max-width 630px) {
    font-size: em(20, 20);
  }
  @include media(max-width 500px) {
    padding-left: 16px;
  }
}

li.ordinals {
  font-weight: 100;
  font-size: em(20, 20);
  letter-spacing: 0.05em;
  color: tint($grey_text, 25%);
  padding-top: 0.9px;
  @include media(max-width 1350px) {
    padding-top: -1px;
  }
  @include media(max-width 500px) {
    font-size: em(18, 20);
  }
}

.ordinal-letter {
  font-family: Source Sans Pro;
  font-size: em(36, 20);
  font-weight: 700;
  padding-right: 2px;
  @include media(max-width 695px) {
    font-size: em(30, 20);
  }
  @include media(max-width 630px) {
    font-size: em(27, 20);
  }
  @include media(max-width 500px) {
    font-size: em(25, 20);
  }
}

strong {
  font-weight: bold;
}

.red-line {
  margin-left: -50px;
  padding-right: 20px;
  padding-bottom: 6px;
  @include media(max-width 500px) {
    display: none;
  }
}

.list a {
  color: $grey_text;
  text-decoration: none;
  &:hover {
    border-bottom: solid 2px $grey_text;
    @include media(max-width 500px) { 
      border-bottom: solid 1px tint($grey_text, 35%); 
    }
  }
  &:visited {
    color: tint($grey_text, 35%);
    &:hover {
      border-bottom: solid 2px tint($grey_text, 35%);
    }
  }
}

